# petpet

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: release.yml
.github/workflows/: auto-label.yml  release.yml  test.yml
data/: models.json
demo/: pixel_animation_demo.html
design/: mist-preview.html
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.css  App.tsx  CeremonyPlayer.tsx  Dashboard.css  Dashboard.tsx  EggPicker.tsx  GbaConfirm.tsx  Pet.tsx  PetSwitcher.css  PetSwitcher.tsx  StatsPanel.tsx  TemplateCreator.tsx  confirm.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: archive_cmds.rs  dashboard.rs  lib.rs  main.rs
desktop/src/views/: ConfirmView.css  ConfirmView.tsx  InfoView.css  InfoView.tsx  MenuView.css  MenuView.tsx  NamingView.css  NamingView.tsx  NotifyView.css  NotifyView.tsx
docs/: PETPET_FORMAT.md  ceremony_spec.md
presets/levels/: long.json  medium.json  short.json
presets/stages/: balanced.json  extended.json  simple.json
src/: event.rs  lib.rs  main.rs  model.rs  paths.rs
src/db/: mod.rs  schema.sql  schema_indexes.sql  writer.rs
src/hooks/: mod.rs  parsers.rs
src/hooks/install/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  util.rs
src/provider/: aider.rs  claude.rs  codex.rs  jsonl_watcher.rs  mod.rs  opencode.rs
src/template/: archive.rs  mod.rs  presets.rs  registry.rs  snapshot.rs  types.rs
src/xp/: algorithm.rs  calculator.rs  classification.rs  cost_query.rs  engine.rs  heuristic.rs  mod.rs  pricing.rs  registry.rs  registry_sync.rs  resolver.rs  state.rs  types.rs  writer.rs
src/xp/scorer/: activity.rs  manual.rs  mod.rs  usage.rs
templates/builtin/kingkong/: levels.json  rules.json  template.json
templates/builtin/kingkong/stages/stage_0/: stage.json
templates/builtin/kingkong/stages/stage_1/: stage.json
templates/builtin/kingkong/stages/stage_2/: stage.json
templates/builtin/kingkong/stages/stage_3/: stage.json
templates/builtin/kingkong/stages/stage_4/: stage.json
templates/builtin/kingkong/stages/stage_5/: stage.json
templates/builtin/kingkong/stages/stage_6/: stage.json
templates/builtin/kingkong/stages/stage_7/: stage.json
templates/builtin/kingkong/stages/stage_8/: stage.json
templates/builtin/kingkong/stages/stage_9/: stage.json
templates/builtin/sun/: levels.json  rules.json  template.json
templates/builtin/sun/stages/stage_1/: on_enter.json
templates/builtin/sun/stages/stage_3/: stage.json
templates/builtin/sun/stages/stage_4/: stage.json
templates/builtin/sun/stages/stage_6/: on_enter.json
templates/builtin/sun/stages/stage_9/: on_enter.json  stage.json
templates/builtin/unicorn/: levels.json  rules.json  template.json
templates/builtin/unicorn/stages/stage_0/: stage.json
templates/builtin/unicorn/stages/stage_1/: on_enter.json  stage.json
templates/builtin/unicorn/stages/stage_2/: stage.json
templates/builtin/unicorn/stages/stage_5/: stage.json
templates/builtin/unicorn/stages/stage_6/: on_enter.json  stage.json
templates/builtin/unicorn/stages/stage_7/: stage.json
templates/builtin/unicorn/stages/stage_8/: stage.json
templates/builtin/unicorn/stages/stage_9/: on_enter.json
tests/: archive_compat.rs  hook_server.rs  hook_shell_e2e.rs
